# DATEND

./: LICENSE  README.md
DATEND/: pyproject.toml
DATEND/src/: DATEND.py  Icon.icns  __init__.py  configuresettings.py  highlighter.py  litdevices.txt  main.py  normaliser.py  prediction.py  richpredictor.pickle  stage_files.py  storage.py  tinker_highlight.py  unchanged_storage.py
DATEND/src/Tests/: test.py
DATEND/src/misc/: first.h5  first.py  mainpageworks.py  page2.py  setup.py
